--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "17.8.3",
     "mongoose": "^7.0.0",
     "nodemon": "^2.0.20",
-    "joi": "17.8.3"
+    "socket.io": "^4.6.1"
   },
   "type": "module"
 }
