--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,6 @@ backend/package-lock.json
 
 # Frontend Ignores
 frontend/node_modules
+frontend/.env
+frontend/.DS_Store
 frontend/package-lock.json
