[PR-4] Merge Frontend into Main  (#4)
* Added Chakra and Gitignore

* Register Implemented

* Added file structure for frontend

* Updated App.jsx

* added frontend boilerplate

* added the frontend basic ui flow logic and components, added redux store

* Removed .DS_Store file

* Removed Fluff

* [PR-1] Merge Backend with Main (#1)

* Added Mongoose and Dotenv

* Gitignore update

* Added Mongoose Connection Callback

* Added User Model

* Register Route

* Register Route connected to server

* Added Joi Validation Lib

* Fixed API Register Route

* [PR-2] Merge Frontend with Main (#2)

* Added Chakra and Gitignore

* Register Implemented

* App.jsx Added Again

---------

Co-authored-by: hannacol <hannacol@oregonstate.edu>
Co-authored-by: Artem Kolpakov <artemkolpakov78@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 # Backend Ignores
 backend/node_modules
 backend/.env
-backend/package-lock.json
+
+
 
 # Frontend Ignores
 frontend/node_modules
-frontend/.env
+frontend/.vs
 frontend/.DS_Store
-frontend/package-lock.json
+frontend/src/.DS_Store
+
