[PR-7]  Merge Staging Branch into Main (#7)
Commits
-------
* Added Chakra and Gitignore
* Register Implemented
* Added file structure for frontend
* Updated App.js
* added frontend boilerplate
* added the frontend basic ui flow logic and components, added redux store
* Removed .DS_Store file
* Removed Fluff
* [PR-1] Merge Backend with Main (#1)
* Added Mongoose and Dote nv
* Gitignore update
* Added Mongoose Connection Callback
* Added User Model
* Register Route
* Register Route connected to server
* Added Joi Validation Lib
* Fixed API Register Route
* [PR-2] Merge Frontend with Main (#2)
* Added Chakra and Gitignore
* Register Implemented
* App.jsx Added Again
* Changed Home to be Post feed and made Lobby page
* Added the feed page and logic for the downvoting/upvoting
* Initial User Slice Work
* [Merge Frontend] Bad-login-fix into Frontend (#6)
* click login button twice
* signup kinda works
* Init
* Removed LoginUser AsyncThunk
* Updatd Gitignore
* Pretter
* Create Post modal
* get_posts api route
* fix get_posts
* Get Posts Feat
* Posts Full Stack Feat
* Load User Data Feat
* Formatting w/ Prettier
* Home -> Feed Page
* Updated Gitignore, Removed Visual Studio Config
* Followers Revamp
* logout works
* fix signup and fix login password check
* user sidebar sorting
* make sure "user not found" and "Use OSU Email" errors work
* make errors go away on successful login or signup
* Follow User Feat. Full Stack
* usePosts Hook
* sort by email not name
---------

Co-authored-by: hannacol <hannacol@oregonstate.edu>
Co-authored-by: Artem Kolpakov <artemkolpakov78@gmail.com>
Co-authored-by: Jeff H <82061589+solderq35@users.noreply.github.com>
Co-authored-by: solderq35 <solderq35@gmail.com>

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "joi": "17.8.3",
-    "mongoose": "^7.0.0",
-    "nodemon": "^2.0.20",
-    "socket.io": "^4.6.1"
-  },
-  "type": "module"
+    "name": "backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "nodemon index.js",
+        "start": "node index.js",
+        "format": "prettier --write ."
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "joi": "17.8.3",
+        "mongoose": "^7.0.0",
+        "nodemon": "^2.0.20",
+        "prettier": "^2.8.4",
+        "socket.io": "^4.6.1"
+    },
+    "type": "module"
 }
