--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
+    "private": true,
     "scripts": {
         "dev": "nodemon index.js",
         "start": "node index.js",
-        "format": "prettier --write ."
+        "format": "prettier --write {src}/**/*.{js,jsx,ts,tsx,json,css,scss,md}"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.1.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "joi": "17.8.3",
+        "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.0.0",
         "nodemon": "^2.0.20",
         "prettier": "^2.8.4",
