--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "dependencies": {
         "axios": "^1.3.4",
         "bcrypt": "^5.1.0",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
+        "csurf": "^1.11.0",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "express-rate-limit": "^6.7.0",
+        "helmet": "^6.1.5",
         "joi": "17.8.3",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.0.0",
