--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
         "format": "prettier --write {src}/**/*.{js,jsx,ts,tsx,json,css,scss,md}"
     },
     "keywords": [],
-    "author": "",
-    "license": "ISC",
+    "author": "Nyumat",
+    "license": "MIT",
     "dependencies": {
         "axios": "^1.3.4",
         "bcrypt": "^5.1.0",
@@ -26,7 +26,6 @@
         "mongoose": "^7.0.0",
         "nodemon": "^2.0.20",
         "prettier": "^2.8.4",
-        "react-router-dom": "^6.9.0",
         "socket.io": "^4.6.1"
     },
     "type": "module",
