--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "dev": "nodemon index.js",
         "start": "node index.js",
-        "format": "prettier --write {src}/**/*.{js,jsx,ts,tsx,json,css,scss,md}"
+        "format": "prettier --write ./frontend/src/**/*.{js,jsx}"
     },
     "keywords": [],
     "author": "Nyumat",
