--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,16 @@
   },
   "dependencies": {
     "@chakra-ui/icon": "^3.0.16",
-    "@chakra-ui/icons": "^2.0.17",
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.5.1",
+    "@chakra-ui/theme-tools": "^2.1.2",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@formkit/auto-animate": "^1.0.0-beta.6",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "framer-motion": "^10.0.1",
+    "lucide-react": "^0.303.0",
     "moment": "^2.29.4",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
