--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "author": "Nyumat",
     "license": "MIT",
     "dependencies": {
+        "@prisma/client": "^5.16.2",
         "axios": "^1.3.4",
         "bcrypt": "^5.1.0",
         "cookie-parser": "^1.4.6",
@@ -24,8 +25,9 @@
         "joi": "17.8.3",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.0.0",
-        "nodemon": "^2.0.20",
+        "nodemon": "^3.1.4",
         "prettier": "^2.8.4",
+        "prisma": "^5.17.0",
         "socket.io": "^4.6.1"
     },
     "type": "module",
