--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,7 @@
 PORT="localhost:3000"
+
 # MONGODB_URI=
-FEED_ID=""
-JWT_PRIVATE_KEY=""
-GIPHY_API_KEY=""
+FEED_ID="test"
+JWT_PRIVATE_KEY="secret"
+GIPHY_API_KEY="d2jjuAZzDSVLZ5kI"
+JWT_SECRET="private"
