--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@chakra-ui/theme-tools": "^2.1.2",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@esbuild/win32-x64": "^0.23.0",
     "@formkit/auto-animate": "^1.0.0-beta.6",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
